--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
         <div class="container">
             <img src="assets/pp-gmail.png" alt="Foto Profil" class="profile-photo">
             <h1 class="hero-title">ANDHIKA ACHMAD FAHREZA</h1>
-            <p class="hero-subtitle">Data & Design Enthusiast</p>
+            <p class="hero-subtitle">AI Engineer Enthusiast . Web Developer . Multimedia-Oriented</p>
             <div class="hero-socials">
-                <a href="https://github.com/dhikafhrz" target="_blank"><i class="fab fa-github"></i></a> <a
-                    href="https://instagram.com/dhika.fhrz" target="_blank"><i class="fab fa-instagram"></i></a> <a
-                    href="mailto:dhikafahreza.ach@gmail.com"><i class="fas fa-envelope"></i></a>
+                <a href="https://github.com/dhikafhrz" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://instagram.com/dhika.fhrz" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="mailto:dhikafahreza.ach@gmail.com"><i class="fas fa-envelope"></i></a>
+                <a href="https://www.linkedin.com/in/andhika-achmad-fahreza-b203153a6/" target="_blank"><i class="fab fa-linkedin"></i></a>
             </div>
             <a href="#about" class="btn-primary">Read More</a>
         </div>
@@ -49,10 +50,8 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <p>
-                    Mahasiswa aktif Sistem Informasi di UIN Sunan Ampel Surabaya yang selalu memperluas pengalaman dan
-                    pengetahuannya. Memiliki ketertarikan pada data dan desain, seperti data analyst, machine learning,
-                    graphic design, dan UI/UX design. Senang dengan tantangan baru yang dibuktikan dengan mengikuti
-                    organisasi yang ada dan siap berkontribusi dalam kerja sama tim. </p>
+                    Saya adalah individu dengan minat dan pengalaman lintas bidang, khususnya pengembangan web, kecerdasan buatan, dan data, dengan pengalaman sebagai Front-End Website Developer yang berfokus pada antarmuka responsif dan user-friendly. Saya juga memiliki ketertarikan dan kemampuan sebagai AI Engineer dan Data Analyst, terutama dalam eksplorasi, preprocessing, analisis data, serta pengembangan solusi berbasis machine learning. Ketertarikan di bidang multimedia melengkapi pendekatan saya dengan menggabungkan aspek teknis dan visual, sehingga solusi yang dihasilkan fungsional sekaligus menarik, serta saya merupakan pribadi yang cepat belajar, adaptif terhadap teknologi baru, dan terbuka untuk kolaborasi lintas bidang.
+                 </p>
             </div>
         </div>
     </section>
@@ -189,7 +188,7 @@
             <div class="education-grid">
                 <div class="education-card animate-on-scroll">
                     <h3>UIN SUNAN AMPEL SURABAYA</h3>
-                    <p>S1 Information System (2021-now)</p>
+                    <p>S1 Information System (2021-2026)</p>
                     <p>IPK: 3.52</p>
                 </div>
                 <div class="education-card animate-on-scroll">
@@ -276,8 +275,9 @@
                     href="https://maps.app.goo.gl/sYtmocYLRxpkwK8V8"> Surabaya, Indonesia</a></p>
             </div>
             <div class="footer-socials">
-                <a href="https://github.com/dhikafhrz" target="_blank"><i class="fab fa-github"></i></a> <a
-                    href="https://instagram.com/dhika.fhrz" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://github.com/dhikafhrz" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://instagram.com/dhika.fhrz" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/andhika-achmad-fahreza-b203153a6/"><i class="fab fa-linkedin"></i></a>
             </div>
             <p class="footer-copy">&copy; 2025 by Andhika Achmad Fahreza.</p>
         </div>
